<?xml version="1.0"?>
<package>
  <name>vehicle</name>
  <version>0.0.0</version>
  <description>The vehicle package</description>

  <maintainer email="nboyd2226@gmail.com">serl</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <!--<build_depend>mavros</build_depend>-->
  <build_depend>tf</build_depend> 
  <build_depend>eigen_conversions</build_depend> 
  <build_depend>eigen</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>lcar_msgs</build_depend>
  <!--<build_depend>mav_control</build_depend>-->

  <run_depend>roscpp</run_depend>
  <!--<run_depend>mavros</run_depend>-->
  <run_depend>tf</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>lcar_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>
  
  <run_depend>rostopic</run_depend>
  <!--<run_depend>mav_control</run_depend>-->

  <export>
  </export>
</package>
