<?xml version="1.0"?>
<package>
  <name>web_gcs</name>
  <version>0.0.0</version>
  <description>This package implements a Web based GUI to allow one Ground
    Ground Control Station Operator to manage and control multiple air and
    ground vehicles to conduct a search and rescue mission.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="singh.karanvir21@gmail.com">Karanvir Panesar</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
